--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index </title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Günes Insektenschutz - Maßgeschneiderter Schutz ohne Bohren</title>
+  <meta name="description" content="Professioneller Insektenschutz für Fenster und Türen von Günes. Maßanfertigung ohne Bohren - sauber, schnell und zuverlässig montiert.">
+  <meta name="keywords" content="Insektenschutz, Fliegengitter, ohne Bohren, Maßanfertigung, Fenster, Türen, Günes">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -36,7 +36,7 @@
     <div class="container position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <img src="assets/img/logo/Logo.png" alt="">
+        <img class="logo" src="assets/img/logo/Logo.png" alt="">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -84,27 +84,27 @@
 
           <div class="col-lg-6 order-2 order-lg-1" data-aos="fade-right" data-aos-delay="200">
             <div class="hero-content">
-              <h1 class="hero-title">Creating Digital Experiences That Matter</h1>
-              <p class="hero-description">We craft beautiful, functional, and meaningful digital solutions that help businesses connect with their audiences in authentic ways.</p>
+              <h1 class="hero-title">Maßgeschneiderter Insektenschutz ohne Bohren</h1>
+              <p class="hero-description">Bei Günes Insektenschutz erhalten Sie perfekt angepasste Lösungen für Ihre Fenster und Türen. Professionell, sauber und ganz ohne Bohren in den Rahmen.</p>
               <div class="hero-actions">
-                <a href="#about" class="btn-primary">Start Your Journey</a>
-                <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="btn-secondary glightbox">
-                  <i class="bi bi-play-circle"></i>
-                  <span>Watch Our Story</span>
+                <a href="#about" class="btn-primary">Jetzt beraten lassen</a>
+                <a href="#contact" class="btn-secondary">
+                  <i class="bi bi-telephone"></i>
+                  <span>Kostenlose Beratung</span>
                 </a>
               </div>
               <div class="hero-stats">
                 <div class="stat-item">
-                  <span class="stat-number">150+</span>
-                  <span class="stat-label">Projects Completed</span>
+                  <span class="stat-number">500+</span>
+                  <span class="stat-label">Zufriedene Kunden</span>
                 </div>
                 <div class="stat-item">
-                  <span class="stat-number">98%</span>
-                  <span class="stat-label">Client Satisfaction</span>
+                  <span class="stat-number">100%</span>
+                  <span class="stat-label">Maßanfertigung</span>
                 </div>
                 <div class="stat-item">
-                  <span class="stat-number">24/7</span>
-                  <span class="stat-label">Support Available</span>
+                  <span class="stat-number">0</span>
+                  <span class="stat-label">Bohrlöcher nötig</span>
                 </div>
               </div>
             </div>
@@ -113,19 +113,19 @@
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="300">
             <div class="hero-visual">
               <div class="hero-image-wrapper">
-                <img src="assets/img/illustration/illustration-15.webp" class="img-fluid hero-image" alt="Hero Image">
+                <img src="assets/img/illustration/Handwerker.png" class="img-fluid hero-image" alt="Hero Image">
                 <div class="floating-elements">
                   <div class="floating-card card-1">
-                    <i class="bi bi-lightbulb"></i>
-                    <span>Innovation</span>
+                    <i class="bi bi-speedometer"></i>
+                    <span>Schnelle Umsetzung</span>
                   </div>
                   <div class="floating-card card-2">
-                    <i class="bi bi-award"></i>
-                    <span>Excellence</span>
+                    <i class="bi bi-rulers"></i>
+                    <span>Maßanfertigung</span>
                   </div>
                   <div class="floating-card card-3">
-                    <i class="bi bi-people"></i>
-                    <span>Collaboration</span>
+                    <i class="bi bi-tools"></i>
+                    <span>Professionelle Montage</span>
                   </div>
                 </div>
               </div>
