--- a/agb.html
+++ b/agb.html
@@ -158,7 +158,7 @@
               <p>Die gelieferte Ware bleibt bis zur vollständigen Bezahlung Eigentum des Anbieters.</p>
 
               <h2>§ 7 Gewährleistung</h2>
-              <p>1. Der Anbieter gewährt 2 Jahre Gewährleistung auf Material und Verarbeitung.</p>
+              <p>1. Der Anbieter gewährt 1 Jahr Gewährleistung auf Material und Verarbeitung.</p>
               <p>2. Bei Maßanfertigungen entfällt das Widerrufsrecht gemäß § 312g Abs. 2 Nr. 1 BGB.</p>
               <p>3. Verschleißteile (z.B. Dichtungen, Bürstengitter) sind von der Gewährleistung ausgenommen.</p>
               <p>4. Die Gewährleistung entfällt bei unsachgemäßer Behandlung oder Eigenreparaturen.</p>
