--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="300">
             <div class="hero-visual">
               <div class="hero-image-wrapper">
-                <img src="assets/img/illustration/Handwerker.png" class="img-fluid hero-image" alt="Hero Image">
+                <img src="assets/img/illustration/handwerker.png" class="img-fluid hero-image" alt="Hero Image">
                 <div class="floating-elements">
                   <div class="floating-card card-1 mt-5">
                     <i class="bi bi-speedometer"></i>
@@ -1360,6 +1360,18 @@ Mit einem erfahrenen Team, handwerklicher Präzision und einem klaren Blick für
       </div><!-- End Section Title -->
             <script src="https://elfsightcdn.com/platform.js" async></script>
             <div class="elfsight-app-e53d48a0-0421-408b-b1ab-9892e6f65fbb" data-elfsight-app-lazy></div>
+            
+            <style>
+            .elfsight-app-e53d48a0-0421-408b-b1ab-9892e6f65fbb,
+            .elfsight-app-e53d48a0-0421-408b-b1ab-9892e6f65fbb *,
+            .eapps-google-reviews-slider-page-rate-text,
+            .eapps-google-reviews-slider-header-rating,
+            .eapps-google-reviews-slider-review,
+            .eapps-google-reviews-slider-review-text,
+            .eapps-google-reviews-slider-review-date {
+                font-family: 'Roboto', sans-serif !important;
+            }
+            </style>
             
             <!-- JavaScript um Elfsight Branding zu entfernen -->
             <script>
